po: update po/de_DE/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/menu.po
+++ b/po/de_DE/menu.po
@@ -6,6 +6,7 @@
 # translatosaurus <accounts@drexler.eu>, 2013
 # translatosaurus <accounts@drexler.eu>, 2012-2013
 # arma7 <armadillo7@googlemail.com>, 2011
+# Benny Bepunkt, 2016
 # Birdiebln <birdiebln@gmail.com>, 2014
 # Christoph Cheauré <transifex@w.roteskreuz.at>, 2012
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011-2012,2014
@@ -29,9 +30,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-16 08:15+0000\n"
-"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:42+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -903,7 +904,7 @@ msgstr "CiviCRM Blog"
 
 msgctxt "menu"
 msgid "CiviCRM Getting Started"
-msgstr ""
+msgstr "Erste Schritte mit CiviCRM"
 
 msgctxt "menu"
 msgid "Case Dashlet"
@@ -2174,13 +2175,23 @@ msgctxt "menu"
 msgid "Payment Methods"
 msgstr "Zahlungsmethoden"
 
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Close Accounting Period"
+msgstr ""
+
 msgctxt "menu"
 msgid "Configure CKEditor"
 msgstr "CKEditor konfigurieren"
 
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviCRM Resources"
+msgstr ""
+
 msgctxt "menu"
 msgid "Batch Merge Duplicate Contacts"
-msgstr ""
+msgstr "Stapelverarbeitung: Kontaktduplikate zusammenführen"
 
 msgctxt "menu"
 msgid "Insert CiviCRM Content"
@@ -2188,11 +2199,11 @@ msgstr "CiviCRM-Inhalt einfügen"
 
 msgctxt "menu"
 msgid "Self-service Registration Update"
-msgstr ""
+msgstr "Self-Service Registrierungsupdate"
 
 msgctxt "menu"
 msgid "Self-service Registration Transfer"
-msgstr ""
+msgstr "Self-Service Registrierungsübertragung"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2211,6 +2222,11 @@ msgstr "Erweiterungen"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "My Reports"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Activity Details"
 msgstr "Aktivitätsdetails"
 
@@ -2222,16 +2238,16 @@ msgstr "Zusammenfassung der Aktivitäten"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Shows activity statistics by type / date"
-msgstr ""
+msgstr "Zeigt Aktivitätsstatistiken nach Typ/Datum"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Pledge Detail"
-msgstr ""
+msgstr "Unterstützungsdetails"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid ""
 "List of pledges including amount pledged, pledge status, next payment date, "
 "balance due, total amount paid etc."
-msgstr ""
+msgstr "Liste von Unterstützungen inkl. Spendenhöhe, Spendenstatus, nächstem Zahlungstermin, Restbetrag, Gesamthöhe, etc."
