--- a/po/es_ES/admin.po
+++ b/po/es_ES/admin.po
@@ -31,9 +31,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-31 08:39+0000\n"
-"Last-Translator: Adrian Torralba Roman <adriantorralba@hotmail.com>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:43+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1037,10 +1037,6 @@ msgstr "Condición de acción"
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Repetition Condition"
 msgstr "Condición de repetición"
-
-#: CRM/Admin/Form/ScheduleReminders.php
-msgid "From Email"
-msgstr "Desde el correo electrónico"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Limit to"
@@ -6457,6 +6453,14 @@ msgid ""
 "              To avoid this issue, please schedule Monthly and Quarterly jobs to run within the first 28 days of the month."
 msgstr "Los valores relativos mensuales se calculan en base a los meses transcurridos.\n              El resultado puede caer en el mismo día del mes, excepto los días del 29 al 31 cuando el mes objeto tiene menos días que el anterior.\n              Por ejemplo si una tarea programada está prevista para que se ejecute el día 31 de Agosto, la próxima invocación se hará el 1 de Octubre,  desde entonces todos los 1 de cada mes.\n              Para evitar este problema, por favor programe las tareas mensuales y trimestrales entre los primeros 28 días del mes."
 
+#: CRM/Admin/Form/MessageTemplates.php
+msgid "Upload Document"
+msgstr ""
+
+#: CRM/Admin/Form/MessageTemplates.php
+msgid "Please upload document"
+msgstr ""
+
 #: CRM/Admin/Form/Navigation.php
 msgid "Menu Item"
 msgstr "Opción de menu"
@@ -6481,9 +6485,9 @@ msgstr "Separador"
 msgid "Top level"
 msgstr "Nivel superior"
 
-#: CRM/Admin/Form/Preferences/Contribute.php
-msgid "Enable Access Control by Financial Type"
-msgstr "Activar el control de acceso por tipo financiero"
+#: CRM/Admin/Form/Options.php
+msgid "Value field Data Type mismatch"
+msgstr ""
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Configure CKEditor"
@@ -6529,6 +6533,10 @@ msgstr "Dejar sin definir"
 msgid "Use language in use at the time"
 msgstr "Usar el idioma en uso"
 
+#: CRM/Admin/Form/Setting/Miscellaneous.php
+msgid "Illegal stack size. Use values between 1 and %1."
+msgstr ""
+
 #: CRM/Admin/Form/Setting.php
 msgid "Save Failed"
 msgstr "Fallo al guardar"
@@ -6541,6 +6549,10 @@ msgstr "Puede necesitar limpiar la memoria caché del navegador para ver los cam
 #: CRM/Admin/Page/CKEditorConfig.php
 msgid "CKEditor Saved"
 msgstr "CKEditor guardado"
+
+#: ang/crmCxn/ManageCtrl.js
+msgid "%1: Welcome (External)"
+msgstr ""
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Unhide"
@@ -6592,6 +6604,16 @@ msgstr "Dejar en blanco para ejecutarlo lo más pronto posible."
 msgid "Leave blank to run at next run frequency."
 msgstr "Dejar en blanco para ejecutarlo en la siguiente frecuencia de ejecución."
 
+#: templates/CRM/Admin/Form/MessageTemplates.tpl
+msgid ""
+"Compose a message on-screen for general use in emails or document output, or"
+" upload a pre-composed document for mail-merge."
+msgstr ""
+
+#: templates/CRM/Admin/Form/MessageTemplates.tpl
+msgid "Upload the document in .docx or .odt format."
+msgstr ""
+
 #: templates/CRM/Admin/Form/Preferences/Contribute.hlp
 msgid "Access Control by Financial Type"
 msgstr "Control de acceso por tipo financiero"
@@ -6602,6 +6624,13 @@ msgid ""
 "<p>For example, Planned Giving bequests may be highly confidential and not appropriate for staff organizing events to see, even though they need to be able to administer the payments for ticket purchases.</p>\n"
 "<p>After enabling, you will be able to set create, view, edit, and delete permissions separately for each financial type by navigating to Administer > Users and Permissions > Permissions (Access Control), and clicking on the Access Control link for your CMS."
 msgstr "Habilitando el control de acceso por tipo financiero solo es requerido si necesita que los usuarios pertenezcan a  un rol para acceder a ciertas transacciones pero no con otros tipos financieros.</p>\n<p>Por ejemplo, las donaciones planificadas pueden ser altamente confidencial y no ser apropiados para que el personal de organización de eventos los vea, sin embargo necesita que puedan administrar los pagos de las compras</p>\n<p>Después de habilitarlo, puede configurar los permisos crear, ver, editar y borrar individualmente para cada tipo financiero navegando a Administrar > Usuarios y Permisos > Permisos (Control de Acceso), y pinchando en el enlace Control de acceso del CMS."
+
+#: templates/CRM/Admin/Form/Preferences/Contribute.tpl
+msgid ""
+"Changing the Prior Financial Period may result in problems calculating "
+"closing account balances accurately and / or exporting of financial "
+"transactions. Do you want to proceed?"
+msgstr ""
 
 #: templates/CRM/Admin/Form/Preferences/Display.hlp
 msgid ""
@@ -6676,6 +6705,14 @@ msgstr "Idioma por defecto (si existe) para registros de contactos."
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid ""
+"In order to use this functionality, the installation's database user must "
+"have privileges to create triggers and views (in MySQL 5.0 – and in MySQL "
+"5.1 if binary logging is enabled – this means the SUPER privilege). This "
+"install either does not seem to have the required privilege enabled."
+msgstr ""
+
+#: templates/CRM/Admin/Form/Setting/Localization.tpl
+msgid ""
 "(Multilingual support currently cannot be enabled on installations with "
 "enabled logging.)"
 msgstr "(Soporte multilingüe actualmente no se puede habilitar en instalaciones con el registro habilitado.)"
@@ -6688,6 +6725,12 @@ msgid ""
 "modifying default values. (These settings are NOT used for the built-in "
 "'Email - send now' feature)."
 msgstr "Estas opciónes se usan para configurar las propiedades del correo opcional CiviMail y permite optimizarlo significativamente. Por favor, lea el documento %1, y asegúrese de entenderlo antes de modificar los valores por defecto. (Esta configuración NO se usa para la característica 'Email - enviar ahora')."
+
+#: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
+msgid ""
+"If enabled, CiviCRM will allow users to submit profiles from external sites."
+" This is disabled by default to limit abuse."
+msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Path.hlp
 msgid "Path Variables"
