po: update po/en_US/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/en_US/install.po
+++ b/po/en_US/install.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 16:48+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:43+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: English (United States) (http://www.transifex.com/civicrm/civicrm/language/en_US/)\n"
 "MIME-Version: 1.0\n"
@@ -583,3 +583,37 @@ msgstr "Drupal Database Details"
 #: install/template.html
 msgid "Requirements"
 msgstr "Requirements"
+
+#: install/index.php
+msgid "[your Backdrop root directory]"
+msgstr "[your Backdrop root directory]"
+
+#: install/index.php
+msgid "This installer can only be used for the Backdrop version of CiviCRM."
+msgstr "This installer can only be used for the Backdrop version of CiviCRM."
+
+#: install/index.php
+msgid "Oops! Incorrect Backdrop version"
+msgstr "Oops! Incorrect Backdrop version"
+
+#: install/index.php
+msgid ""
+"This version of CiviCRM can only be used with Backdrop 1.x. Please ensure "
+"that '%1' exists if you are running Backdrop 1.0 and over."
+msgstr "This version of CiviCRM can only be used with Backdrop 1.x. Please ensure that '%1' exists if you are running Backdrop 1.0 and over."
+
+#: install/index.php
+msgid ""
+"Backdrop user permissions have been automatically set - giving anonymous and"
+" authenticated users access to public CiviCRM forms and features. We "
+"recommend that you <a %1>review these permissions</a> to ensure that they "
+"are appropriate for your requirements (<a %2>learn more...</a>)"
+msgstr "Backdrop user permissions have been automatically set - giving anonymous and authenticated users access to public CiviCRM forms and features. We recommend that you <a %1>review these permissions</a> to ensure that they are appropriate for your requirements (<a %2>learn more...</a>)"
+
+#: install/template.html
+msgid "Backdrop Database Settings"
+msgstr "Backdrop Database Settings"
+
+#: install/template.html
+msgid "Backdrop Database Details"
+msgstr "Backdrop Database Details"
