--- a/po/en_US/financial.po
+++ b/po/en_US/financial.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:43+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: English (United States) (http://www.transifex.com/civicrm/civicrm/language/en_US/)\n"
 "MIME-Version: 1.0\n"
@@ -939,6 +939,43 @@ msgstr "There are no financial accounts assigned to this financial type. You can
 msgid "Payment Method:"
 msgstr "Payment Method:"
 
+#: CRM/Financial/BAO/FinancialAccount.php
+msgid ""
+"You cannot change the account type since this financial account refers to a "
+"financial item having an account type of Revenue/Liability."
+msgstr "You cannot change the account type since this financial account refers to a financial item having an account type of Revenue/Liability."
+
+#: CRM/Financial/BAO/FinancialAccount.php
+msgid ""
+"Revenue recognition date can only be specified if the financial type "
+"selected has a deferred revenue account configured. Please have an "
+"administrator set up the deferred revenue account at Administer > "
+"CiviContribute > Financial Accounts, then configure it for financial types "
+"at Administer > CiviContribution > Financial Types, Accounts"
+msgstr "Revenue recognition date can only be specified if the financial type selected has a deferred revenue account configured. Please have an administrator set up the deferred revenue account at Administer > CiviContribute > Financial Accounts, then configure it for financial types at Administer > CiviContribution > Financial Types, Accounts"
+
+#: CRM/Financial/BAO/FinancialAccount.php
+msgid ""
+"Deferred revenue account is not configured for selected financial type. "
+"Please have an administrator set up the deferred revenue account at "
+"Administer > CiviContribute > Financial Accounts, then configure it for "
+"financial types at Administer > CiviContribution > Financial Types, Accounts"
+msgstr "Deferred revenue account is not configured for selected financial type. Please have an administrator set up the deferred revenue account at Administer > CiviContribute > Financial Accounts, then configure it for financial types at Administer > CiviContribution > Financial Types, Accounts"
+
+#: CRM/Financial/BAO/FinancialAccount.php
+msgid ""
+"Before Deferred Revenue can be enabled, a Deferred Revenue Account relationship must be defined for all financial types currently used for Memberships and Events, including\n"
+"<ul>\n"
+"<li>those specified for each membership type at Admin > CiviMember > Membership Types, edit</li>\n"
+"<li>on the Fees tab when managing events</li>\n"
+"<li>the default financial type associated with a membership or event price set</li>\n"
+"<li>the financial type for a membership price set field option when the membership type is non-blank</li>\n"
+"<li>as the financial type for a price set field with participant count > 0</li>\n"
+"<li>as the financial type for a price set field option with participant count > 0</li>\n"
+"</ul>\n"
+"In other words, please create deferred revenue accounts at Administer > CiviContribute > Financial Accounts, then configure them for the following financial types at Administer > CiviContribute > Financial Types, accounts:"
+msgstr "Before Deferred Revenue can be enabled, a Deferred Revenue Account relationship must be defined for all financial types currently used for Memberships and Events, including\n<ul>\n<li>those specified for each membership type at Admin > CiviMember > Membership Types, edit</li>\n<li>on the Fees tab when managing events</li>\n<li>the default financial type associated with a membership or event price set</li>\n<li>the financial type for a membership price set field option when the membership type is non-blank</li>\n<li>as the financial type for a price set field with participant count > 0</li>\n<li>as the financial type for a price set field option with participant count > 0</li>\n</ul>\nIn other words, please create deferred revenue accounts at Administer > CiviContribute > Financial Accounts, then configure them for the following financial types at Administer > CiviContribute > Financial Types, accounts:"
+
 #: CRM/Financial/BAO/FinancialType.php
 msgid ""
 "Changing the name of a Financial Type will result in losing the current permissions associated with that Financial Type.\n"
@@ -954,6 +991,10 @@ msgstr "administer CiviCRM Financial Types"
 #: CRM/Financial/BAO/FinancialType.php
 msgid "Administer access to Financial Types"
 msgstr "Administer access to Financial Types"
+
+#: CRM/Financial/BAO/FinancialTypeAccount.php
+msgid "This financial account cannot have '%1' relationship."
+msgstr "This financial account cannot have '%1' relationship."
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency ID"
@@ -974,6 +1015,15 @@ msgstr "Full Currency Name"
 #: CRM/Financial/DAO/EntityFinancialAccount.php
 msgid "Entity Financial Account ID"
 msgstr "Entity Financial Account ID"
+
+#: CRM/Financial/DAO/FinancialAccount.php
+#: CRM/Financial/Form/FinancialAccount.php
+msgid "Opening Balance"
+msgstr "Opening Balance"
+
+#: CRM/Financial/DAO/FinancialAccount.php
+msgid "Current period opening Balance"
+msgstr "Current period opening Balance"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item ID"
@@ -1011,6 +1061,10 @@ msgstr "Is Payment?"
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Suffix for PHP class name implementation"
 msgstr "Suffix for PHP class name implementation"
+
+#: CRM/Financial/Form/FinancialAccount.php
+msgid "Current Period Opening Balance"
+msgstr "Current Period Opening Balance"
 
 #: templates/CRM/Financial/Form/FinancialAccount.hlp
 msgid "Financial Account Owner"
