--- a/po/es_ES/provinces.po
+++ b/po/es_ES/provinces.po
@@ -17,9 +17,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-31 09:11+0000\n"
-"Last-Translator: Adrian Torralba Roman <adriantorralba@hotmail.com>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:42+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15736,9 +15736,33 @@ msgid "Phuket"
 msgstr "Phuket"
 
 msgctxt "province"
+msgid "Wake Island"
+msgstr ""
+
+msgctxt "province"
 msgid "Northern Ostrobothnia"
 msgstr "Ostrobotnia del Norte"
 
 msgctxt "province"
 msgid "Telangana"
 msgstr "Telangana"
+
+msgctxt "province"
+msgid "Guadeloupe"
+msgstr ""
+
+msgctxt "province"
+msgid "Martinique"
+msgstr ""
+
+msgctxt "province"
+msgid "Guyane"
+msgstr ""
+
+msgctxt "province"
+msgid "La Réunion"
+msgstr ""
+
+msgctxt "province"
+msgid "Mayotte"
+msgstr ""
