--- a/po/es_ES/financial.po
+++ b/po/es_ES/financial.po
@@ -16,9 +16,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-09-28 08:16+0000\n"
-"Last-Translator: Adrian Torralba Roman <adriantorralba@hotmail.com>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:43+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -949,6 +949,43 @@ msgstr "No hay cuentas financieras asignadas a este tipo financiero. Puede  <a h
 msgid "Payment Method:"
 msgstr "Forma de pago:"
 
+#: CRM/Financial/BAO/FinancialAccount.php
+msgid ""
+"You cannot change the account type since this financial account refers to a "
+"financial item having an account type of Revenue/Liability."
+msgstr ""
+
+#: CRM/Financial/BAO/FinancialAccount.php
+msgid ""
+"Revenue recognition date can only be specified if the financial type "
+"selected has a deferred revenue account configured. Please have an "
+"administrator set up the deferred revenue account at Administer > "
+"CiviContribute > Financial Accounts, then configure it for financial types "
+"at Administer > CiviContribution > Financial Types, Accounts"
+msgstr ""
+
+#: CRM/Financial/BAO/FinancialAccount.php
+msgid ""
+"Deferred revenue account is not configured for selected financial type. "
+"Please have an administrator set up the deferred revenue account at "
+"Administer > CiviContribute > Financial Accounts, then configure it for "
+"financial types at Administer > CiviContribution > Financial Types, Accounts"
+msgstr ""
+
+#: CRM/Financial/BAO/FinancialAccount.php
+msgid ""
+"Before Deferred Revenue can be enabled, a Deferred Revenue Account relationship must be defined for all financial types currently used for Memberships and Events, including\n"
+"<ul>\n"
+"<li>those specified for each membership type at Admin > CiviMember > Membership Types, edit</li>\n"
+"<li>on the Fees tab when managing events</li>\n"
+"<li>the default financial type associated with a membership or event price set</li>\n"
+"<li>the financial type for a membership price set field option when the membership type is non-blank</li>\n"
+"<li>as the financial type for a price set field with participant count > 0</li>\n"
+"<li>as the financial type for a price set field option with participant count > 0</li>\n"
+"</ul>\n"
+"In other words, please create deferred revenue accounts at Administer > CiviContribute > Financial Accounts, then configure them for the following financial types at Administer > CiviContribute > Financial Types, accounts:"
+msgstr ""
+
 #: CRM/Financial/BAO/FinancialType.php
 msgid ""
 "Changing the name of a Financial Type will result in losing the current permissions associated with that Financial Type.\n"
@@ -964,6 +1001,10 @@ msgstr "Administrar Tipos financieros CiviCRM"
 #: CRM/Financial/BAO/FinancialType.php
 msgid "Administer access to Financial Types"
 msgstr "Administrar acceso a los Tipos financieros"
+
+#: CRM/Financial/BAO/FinancialTypeAccount.php
+msgid "This financial account cannot have '%1' relationship."
+msgstr ""
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency ID"
@@ -984,6 +1025,15 @@ msgstr "Nombre completo de la moneda"
 #: CRM/Financial/DAO/EntityFinancialAccount.php
 msgid "Entity Financial Account ID"
 msgstr "ID Cuenta de la entidad financiera"
+
+#: CRM/Financial/DAO/FinancialAccount.php
+#: CRM/Financial/Form/FinancialAccount.php
+msgid "Opening Balance"
+msgstr ""
+
+#: CRM/Financial/DAO/FinancialAccount.php
+msgid "Current period opening Balance"
+msgstr ""
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item ID"
@@ -1021,6 +1071,10 @@ msgstr "¿Es pago?"
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Suffix for PHP class name implementation"
 msgstr "Sufijo para la implementación del nombre de la clase PHP"
+
+#: CRM/Financial/Form/FinancialAccount.php
+msgid "Current Period Opening Balance"
+msgstr ""
 
 #: templates/CRM/Financial/Form/FinancialAccount.hlp
 msgid "Financial Account Owner"
