po: update po/es_MX/countries.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_MX/countries.po
+++ b/po/es_MX/countries.po
@@ -6,13 +6,13 @@
 # Alberto Torreblanca <alberto@torreblanca.pe>, 2013
 # ixiam <info@ixiam.com>, 2013
 # ixiam_jose <jrombini@hotmail.com>, 2012
-# Marti <m.prat@ixiam.com>, 2015
+# Marti Prat <m.prat@ixiam.com>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-08 17:05-0400\n"
-"PO-Revision-Date: 2016-05-08 22:32+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:41+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Spanish (Mexico) (http://www.transifex.com/civicrm/civicrm/language/es_MX/)\n"
 "MIME-Version: 1.0\n"
@@ -1047,4 +1047,24 @@ msgstr ""
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
+msgstr ""
+
+msgctxt "country"
+msgid "Virgin Islands,British"
+msgstr ""
+
+msgctxt "country"
+msgid "Côte d’Ivoire"
+msgstr ""
+
+msgctxt "country"
+msgid "Iran, Islamic Republic Of"
+msgstr ""
+
+msgctxt "country"
+msgid "Macedonia, Republic Of"
+msgstr ""
+
+msgctxt "country"
+msgid "Palestinian Territory"
 msgstr ""
