--- a/po/es_MX/provinces.po
+++ b/po/es_MX/provinces.po
@@ -6,7 +6,7 @@
 # ixiam <info@ixiam.com>, 2013
 # Jon Altuna <jonaltuna@msn.com>, 2015
 # ixiam_jose <jrombini@hotmail.com>, 2012
-# Marti <m.prat@ixiam.com>, 2013
+# Marti Prat <m.prat@ixiam.com>, 2013
 # Joaquin Cardiel <orfeon@hotmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # sluc23 <sluc23@hotmail.com>, 2012
@@ -14,8 +14,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:42+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Spanish (Mexico) (http://www.transifex.com/civicrm/civicrm/language/es_MX/)\n"
 "MIME-Version: 1.0\n"
@@ -15733,9 +15733,33 @@ msgid "Phuket"
 msgstr ""
 
 msgctxt "province"
+msgid "Wake Island"
+msgstr ""
+
+msgctxt "province"
 msgid "Northern Ostrobothnia"
 msgstr ""
 
 msgctxt "province"
 msgid "Telangana"
+msgstr ""
+
+msgctxt "province"
+msgid "Guadeloupe"
+msgstr ""
+
+msgctxt "province"
+msgid "Martinique"
+msgstr ""
+
+msgctxt "province"
+msgid "Guyane"
+msgstr ""
+
+msgctxt "province"
+msgid "La Réunion"
+msgstr ""
+
+msgctxt "province"
+msgid "Mayotte"
 msgstr ""
