--- a/po/fr_CA/countries.po
+++ b/po/fr_CA/countries.po
@@ -11,8 +11,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-08 17:05-0400\n"
-"PO-Revision-Date: 2016-05-08 22:35+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:41+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -1048,3 +1048,23 @@ msgstr "Saint Barthélemy"
 msgctxt "country"
 msgid "Saint Martin (French part)"
 msgstr "Saint-Martin (Antilles françaises)"
+
+msgctxt "country"
+msgid "Virgin Islands,British"
+msgstr ""
+
+msgctxt "country"
+msgid "Côte d’Ivoire"
+msgstr ""
+
+msgctxt "country"
+msgid "Iran, Islamic Republic Of"
+msgstr ""
+
+msgctxt "country"
+msgid "Macedonia, Republic Of"
+msgstr ""
+
+msgctxt "country"
+msgid "Palestinian Territory"
+msgstr ""
