--- a/po/hu_HU/countries.po
+++ b/po/hu_HU/countries.po
@@ -6,14 +6,14 @@
 # András Kéri <keri.andras@gmail.com>, 2012
 # brucezly <brucezly@gmail.com>, 2011
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013,2015
+# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013,2015-2016
 # Zoltán Reizinger <zreizinger@hdsnet.hu>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-08 17:05-0400\n"
-"PO-Revision-Date: 2016-05-08 22:32+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 19:12+0000\n"
+"Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1048,3 +1048,23 @@ msgstr "Saint Barthélemy"
 msgctxt "country"
 msgid "Saint Martin (French part)"
 msgstr "Saint Martin (Francia rész)"
+
+msgctxt "country"
+msgid "Virgin Islands,British"
+msgstr "Virgin-szigetek (brit)"
+
+msgctxt "country"
+msgid "Côte d’Ivoire"
+msgstr "Elefántcsontpart"
+
+msgctxt "country"
+msgid "Iran, Islamic Republic Of"
+msgstr "Iráni Iszlám Köztársaság"
+
+msgctxt "country"
+msgid "Macedonia, Republic Of"
+msgstr "Macedón Köztársaság"
+
+msgctxt "country"
+msgid "Palestinian Territory"
+msgstr "Palesztin Területek"
