po: update po/hu_HU/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/contribute.po
+++ b/po/hu_HU/contribute.po
@@ -10,8 +10,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-29 20:23+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 19:43+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -4978,20 +4978,26 @@ msgid "Recurring contribution"
 msgstr "Ismétlődő adományozás"
 
 #: CRM/Contribute/BAO/ContributionRecur.php
-msgid " All recurring contributions"
+msgid "All recurring contributions"
 msgstr "Összes Ismétlődő adományozás"
 
-#: CRM/Contribute/BAO/ContributionRecur.php
-msgid " Recurring contributions with at least one payment"
-msgstr "Ismétlődő adományozás legalább egy befizetéssel"
-
-#: CRM/Contribute/BAO/Query.php
+#: CRM/Contribute/BAO/ContributionRecur.php CRM/Contribute/BAO/Query.php
 msgid "Recurring contributions with at least one payment"
 msgstr "Ismétlődő adományozás legalább egy befizetéssel"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "All recurring contributions regardless of payments"
 msgstr "Összes ismétlődő adományozás befizetéstől függetlenül"
+
+#: CRM/Contribute/DAO/Contribution.php CRM/Contribute/Form/Contribution.php
+#: templates/CRM/Contribute/Form/ContributionView.tpl
+msgid "Revenue Recognition Date"
+msgstr "Bevétel elismerés dátuma"
+
+#: CRM/Contribute/DAO/ContributionPage.php
+#: CRM/Contribute/Form/ContributionPage/Amount.php
+msgid "Adjust Recurring Start Date"
+msgstr "Ismétlődő adomány kezdőnap beállítása"
 
 #: CRM/Contribute/DAO/ContributionProduct.php
 msgid "Contribution Product ID"
@@ -5069,6 +5075,22 @@ msgstr "Névjegy link szín"
 msgid "Homepage Link Colour"
 msgstr "Weboldal link szín"
 
+#: CRM/Contribute/Form/AdditionalInfo.php
+msgid "-select product-"
+msgstr "-termék kiválasztása-"
+
+#: CRM/Contribute/Form/CloseAccPeriod.php
+msgid "Accounting Period to Close"
+msgstr "Lezárandó könyvelési periódus"
+
+#: CRM/Contribute/Form/CloseAccPeriod.php
+msgid "Are you sure you want to close accounting period?"
+msgstr "Biztos abban, hogy lezárja a könyvelési periódust?"
+
+#: CRM/Contribute/Form/CloseAccPeriod.php
+msgid "Accounting Period has been closed successfully!"
+msgstr "A könyvelési periódus sikeresen lezárva!"
+
 #: CRM/Contribute/Form/Contribution/Confirm.php
 msgid "Payment Processor Error message :"
 msgstr "Fizetés feldolgozó hiba üzenete:"
@@ -5078,18 +5100,35 @@ msgid "Online Contribution:"
 msgstr "Online adományozás:"
 
 #: CRM/Contribute/Form/Contribution/Main.php
+msgid "Returning since contribution has already been handled."
+msgstr "Ismétlődő az adomány kezelésének megtöténtetől."
+
+#: CRM/Contribute/Form/Contribution/Main.php
 msgid ""
 "This page does not have any price fields configured or you may not have "
 "permission for them. Please contact the site administrator for more details."
 msgstr "Ezen oldal nem tartalmaz beállított árlista mezőket vagy ön nem rendelkezik elég jogusultsággal hozzájuk. Kérem keresse az oldal adminisztrátorát a további részletekért."
 
 #: CRM/Contribute/Form/Contribution/Main.php
+msgid "Confirm Payment"
+msgstr "Befizetés megerősítése"
+
+#: CRM/Contribute/Form/Contribution/Main.php
 msgid "You cannot have auto-renewal on if you are paying later."
 msgstr "Nem lehet automatikus megújítása ha később fizet."
+
+#: CRM/Contribute/Form/Contribution.php CRM/Contribute/Selector/Search.php
+#: templates/CRM/Contribute/Form/Contribution.tpl
+msgid "Pay with Credit Card"
+msgstr "Bankkártyás fizetés"
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "Transaction ID for the refund payment"
 msgstr "Tranzakció azonosítója a vissztérítési fizetésnek"
+
+#: CRM/Contribute/Form/Contribution.php
+msgid "Month and Year are required field for Revenue Recognition."
+msgstr "Hónap és Év megadása szükséges a bevétel kimutatáshoz."
 
 #: CRM/Contribute/Form/Contribution.php
 msgid ""
@@ -5107,6 +5146,30 @@ msgstr "Kérem válasszon egy tagságot."
 #: CRM/Contribute/Form/ContributionBase.php
 msgid "Please renew my membership automatically."
 msgstr "Kérem automatikusan hosszabbítsa meg a tagságomat."
+
+#: CRM/Contribute/Form/ContributionPage/Amount.php
+msgid "Specific Calendar Date"
+msgstr "Egyedi naptári dátum"
+
+#: CRM/Contribute/Form/ContributionPage/Amount.php
+msgid "Specific day of Month"
+msgstr "Adja meg a hónap napját"
+
+#: CRM/Contribute/Form/ContributionPage/Amount.php
+msgid "Day of Contribution"
+msgstr "Adomány napja"
+
+#: CRM/Contribute/Form/ContributionPage/Amount.php
+msgid "Recurring Contribution Start Date Default"
+msgstr "Ismétlődő adomány alapértelmezett kezdési dátuma"
+
+#: CRM/Contribute/Form/ContributionPage/Amount.php
+msgid "Allow Edits to Recurring Donation Start date?"
+msgstr "Ismétlődő adomány kezdődátum szerkesztést engedélyezi?"
+
+#: CRM/Contribute/Form/ContributionPage/Amount.php
+msgid "The recurring start date cannot be prior to the current date."
+msgstr "Az ismétlődő adomány kezdődátuma nem lehet korábbi a mai napnál."
 
 #: CRM/Contribute/Form/Task/Batch.php CRM/Contribute/Form/Task/PickProfile.php
 #: CRM/Contribute/Task.php
@@ -5198,11 +5261,11 @@ msgstr "Számlák - nyomtatás vagy e-mail"
 msgid "No payments found for this %1 record"
 msgstr "Nem találtam befizetést ehhez %1 a rekordhoz"
 
-#: templates/CRM/Contribute/Form/Contribution.tpl
+#: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid ""
-"Use this form to submit a new contribution on behalf of %1. <strong>A\n"
-"        %2 transaction will be submitted</strong> using the selected payment processor."
-msgstr "Használja ezt az űrlapot az új adomány beküldésére %1 nevében.  <strong> Egy\n %2 tranzakció lesz elindítva</strong> a kiválasztott fizetés feldolgozó felhasználásával."
+"Recurring payment will be processed this day of the month following "
+"submission of this contribution page."
+msgstr "A hónap e napján lesz az ismétlődő adomány feldolgozva, ezen adomány oldal beküldése után.  "
 
 #: templates/CRM/Contribute/Form/ContributionPage/Custom.hlp
 msgid "Contributor Profiles"
@@ -5245,6 +5308,10 @@ msgid ""
 "Note: if the correct payment method is not listed here (e.g. for in-kind "
 "donations) ask your administrator to add a new option to this list."
 msgstr "Megjegyzés: ha a helyes fizetési eszköz nincs itt kilistázva (pl. természetbeni adományok) kérje meg az adminisztrátorát egy új opció listához adásához."
+
+#: templates/CRM/Contribute/Page/UserDashboard.tpl
+msgid "Pay Now"
+msgstr "Fizessen most"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "INVOICE"
