po: update po/hu_HU/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/admin.po
+++ b/po/hu_HU/admin.po
@@ -9,8 +9,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-29 20:16+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 19:09+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -1015,10 +1015,6 @@ msgstr "akció feltétele"
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Repetition Condition"
 msgstr "Ismétlés feltétele"
-
-#: CRM/Admin/Form/ScheduleReminders.php
-msgid "From Email"
-msgstr "Feladó"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Limit to"
@@ -6435,6 +6431,14 @@ msgid ""
 "              To avoid this issue, please schedule Monthly and Quarterly jobs to run within the first 28 days of the month."
 msgstr "A relatív hónap értékek számításához az áthidalt hónap(ok)on alapul. \nAz eredmény azon a napon fog megállni amelyikre esik kivéve a 29-31 napos hónapokat, amikor a a cél hónap kevesebb napot tartalmaz mint a megelőző hónap.\nPéldául, a a feladat augusztus 31-re ütemezett, a következő futása október 1-re esik, és utána minden hónap elsejére.\nHogy elkerülje a hasonló eseteket, kérjük a Havonta és Negyedévente gyakoriságra ütemezett feladatokat,   futtassa a hónap első 28 napján belül."
 
+#: CRM/Admin/Form/MessageTemplates.php
+msgid "Upload Document"
+msgstr "Dokumentum feltöltése"
+
+#: CRM/Admin/Form/MessageTemplates.php
+msgid "Please upload document"
+msgstr "Kérem töltsön fel dokumentumot"
+
 #: CRM/Admin/Form/Navigation.php
 msgid "Menu Item"
 msgstr "Menü elem"
@@ -6459,9 +6463,9 @@ msgstr "Elválasztó"
 msgid "Top level"
 msgstr "Felső szintű"
 
-#: CRM/Admin/Form/Preferences/Contribute.php
-msgid "Enable Access Control by Financial Type"
-msgstr "Pénzügyi típus szerinti hozzáférés beállítás engedélyezése"
+#: CRM/Admin/Form/Options.php
+msgid "Value field Data Type mismatch"
+msgstr "Értékmező adat típus eltérés"
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Configure CKEditor"
@@ -6507,6 +6511,10 @@ msgstr "Határozatlanként hagy"
 msgid "Use language in use at the time"
 msgstr "A használatban lévő nyelv használata"
 
+#: CRM/Admin/Form/Setting/Miscellaneous.php
+msgid "Illegal stack size. Use values between 1 and %1."
+msgstr "Illegális stack méret. Használjon 1 és %1 közötti értékeket."
+
 #: CRM/Admin/Form/Setting.php
 msgid "Save Failed"
 msgstr "Sikertelen mentés"
@@ -6519,6 +6527,10 @@ msgstr "A böngészőjének a chach-ét lehet, hogy ki kell ürítenie a CiviCRM
 #: CRM/Admin/Page/CKEditorConfig.php
 msgid "CKEditor Saved"
 msgstr "CKEditor mentve"
+
+#: ang/crmCxn/ManageCtrl.js
+msgid "%1: Welcome (External)"
+msgstr "%1: Üdvözöljük (Külső)"
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Unhide"
@@ -6570,6 +6582,16 @@ msgstr "Hagyja üresen a mielőbbi futtatáshoz."
 msgid "Leave blank to run at next run frequency."
 msgstr "Hagyja üresen a következő frekvencia szerinti futtatáshoz."
 
+#: templates/CRM/Admin/Form/MessageTemplates.tpl
+msgid ""
+"Compose a message on-screen for general use in emails or document output, or"
+" upload a pre-composed document for mail-merge."
+msgstr "Az e-mail vagy dokumentum kimenethez készítsen üzenetet a képernyőn, vagy töltsön fel előre elkészített dokumentumot a körlevélhez. "
+
+#: templates/CRM/Admin/Form/MessageTemplates.tpl
+msgid "Upload the document in .docx or .odt format."
+msgstr "Töltse fel a dokumentumot .docx vagy .odt formátumban."
+
 #: templates/CRM/Admin/Form/Preferences/Contribute.hlp
 msgid "Access Control by Financial Type"
 msgstr "Pénzügyi típus hozzáférés beállítása"
@@ -6580,6 +6602,13 @@ msgid ""
 "<p>For example, Planned Giving bequests may be highly confidential and not appropriate for staff organizing events to see, even though they need to be able to administer the payments for ticket purchases.</p>\n"
 "<p>After enabling, you will be able to set create, view, edit, and delete permissions separately for each financial type by navigating to Administer > Users and Permissions > Permissions (Access Control), and clicking on the Access Control link for your CMS."
 msgstr "A Pénzügyi típus szerinti hozzáférés beállítás engedélyezése csak akkor szükséges. ha olyan felhasználóra van szüksége egy szerepkörben néhány pénzügyi tranzakcióhoz hozzá kell férni, de nem egy bizonyos pénzügyi típusnál. </p>\n<p>Például, egy hagyaték  nagyon bizalmas lehet és nem lenne jó, ha egy rendezvényt szervező munkatárs látná azt, miközben neki látnia kell a rendezvény belépőjegyeket és a kapcsolódó befizetéseket. </p>\n<p>Az engedélyezése után, beállíthatja a létrehozás, megtekintés, szerkesztés és törlés jogosultságokat egyenként minden pénzügyi típusra, az Adminisztrálás >Felhasználók és jogosultságok > Jogosultságok (hozzáférés) menüpont alatt a tartalom kezelőrendszer hozzáférés engedélyezés linkjére kattintva."
+
+#: templates/CRM/Admin/Form/Preferences/Contribute.tpl
+msgid ""
+"Changing the Prior Financial Period may result in problems calculating "
+"closing account balances accurately and / or exporting of financial "
+"transactions. Do you want to proceed?"
+msgstr "Előző pénzügyi periódus megváltoztatása problémát okozhat a záró egyenlegek pontos kiszámításánál és / vagy a pénzügyi tranzakciók kiszámításánál. Tovább kíván lépni?"
 
 #: templates/CRM/Admin/Form/Preferences/Display.hlp
 msgid ""
@@ -6654,6 +6683,14 @@ msgstr "Alapértelmezett nyelv (ha van) a kapcsolat rekordokhoz."
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid ""
+"In order to use this functionality, the installation's database user must "
+"have privileges to create triggers and views (in MySQL 5.0 – and in MySQL "
+"5.1 if binary logging is enabled – this means the SUPER privilege). This "
+"install either does not seem to have the required privilege enabled."
+msgstr "Ahhoz hogy használhassa ezt a funkciót, a telepítendő adatbázis felhasználójának rendelkeznie kell jogokkal hogy létrehozhasson \"triggerek\"-et és nézeteket ( a MYSQL 5.0 - és a MYSQL 5.1 esetében ha a bináris logolás engedélyezve van - ez azt jelenti hogy SUPER jogosultság) . Ezen telepítésnél úgy látszik, hogy a szükséges jogosultság nincs engedélyezve."
+
+#: templates/CRM/Admin/Form/Setting/Localization.tpl
+msgid ""
 "(Multilingual support currently cannot be enabled on installations with "
 "enabled logging.)"
 msgstr "(Többnyelvű támogatás jelenleg nem engedélyezhető az olyan telepítéseknél ahol a engedélyezett naplózás.)"
@@ -6666,6 +6703,12 @@ msgid ""
 "modifying default values. (These settings are NOT used for the built-in "
 "'Email - send now' feature)."
 msgstr "Ezek a beállítások a levelező beállításait tartalmazzák az opcionális CiviKörlevél komponenshez és jelentősen optimalizálhatja vele a teljesítményt. Kérem olvassa el a dokumentációban %1, és győződjön meg róla, hogy érti azt mielőtt módosítja az alapértelmezett értékeket. (Ezek a beállítások nem érintik a beépített 'E-mail küldés a kapcsolatoknak' funkciót)."
+
+#: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
+msgid ""
+"If enabled, CiviCRM will allow users to submit profiles from external sites."
+" This is disabled by default to limit abuse."
+msgstr "Ha engedélyezett, a CiviCRM lehetővé teszi a felhasználóknak, hogy profilokat küldjön a külső oldalakról. Ez alapértelmezetten letiltott a visszaélés elkerülésére."
 
 #: templates/CRM/Admin/Form/Setting/Path.hlp
 msgid "Path Variables"
