po: update po/hu_HU/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/report.po
+++ b/po/hu_HU/report.po
@@ -9,8 +9,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-10 10:37+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 19:53+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -2053,6 +2053,31 @@ msgstr "Létező Jelentés(ek)"
 msgid "There are currently no Report Templates."
 msgstr "Jelenleg nincsenek Jelentés Sablonok."
 
+#: CRM/Report/BAO/ReportInstance.php
+msgid "Save a copy..."
+msgstr "Másolat mentése..."
+
+#: CRM/Report/BAO/ReportInstance.php
+msgid "(Copy) "
+msgstr "(Másolás)"
+
+#: CRM/Report/BAO/ReportInstance.php
+msgid "Print to PDF"
+msgstr "Pdf nyomtatás"
+
+#: CRM/Report/BAO/ReportInstance.php
+msgid "Export as CSV"
+msgstr "Mentés CSV-be"
+
+#: CRM/Report/BAO/ReportInstance.php CRM/Report/Page/InstanceList.php
+msgid "Delete report"
+msgstr "Jelentés törlése"
+
+#: CRM/Report/BAO/ReportInstance.php CRM/Report/Page/InstanceList.php
+msgid ""
+"Are you sure you want delete this report? This action cannot be undone."
+msgstr "Biztos abban, hogy törli ezt a jelentést? Ez a művelet nem visszavonható."
+
 #: CRM/Report/Form/Activity.php
 msgid "Source Name"
 msgstr "Forrás neve"
@@ -2123,9 +2148,17 @@ msgstr "További információ a csoportosítás kezelésére."
 msgid "Contact Merge"
 msgstr "Kapcsolat összefűzés"
 
+#: CRM/Report/Form/Contribute/DeferredRevenue.php
+msgid "Deferred Financial Account"
+msgstr "Elutasított pénzügyiszámla"
+
 #: CRM/Report/Form/Contribute/Detail.php
 msgid "Net"
 msgstr "Háló"
+
+#: CRM/Report/Form/Contribute/Detail.php
+msgid "View Contribution Details"
+msgstr "Adomány részleteinek megtekintése"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Email on hold"
@@ -2155,13 +2188,79 @@ msgstr "Összesen "
 msgid "Total for Fiscal Year "
 msgstr "Pénzügyi évre összesen"
 
-#: CRM/Report/Form/Contribute/Lybunt.php
+#: CRM/Report/Form/Contribute/Lybunt.php CRM/Report/Form/Contribute/Sybunt.php
 msgid "Total LifeTime"
 msgstr "Életében összesen"
 
 #: CRM/Report/Form/Contribute/Recur.php
 msgid "Last Contribution Processed"
 msgstr "Utolsó feldolgozott adomány"
+
+#: CRM/Report/Form/Contribute/Repeat.php
+msgid "% New Donors"
+msgstr "% Új adományozók"
+
+#: CRM/Report/Form/Contribute/Repeat.php
+msgid "% Lapsed Donors"
+msgstr "% elmaradó adományozók"
+
+#: CRM/Report/Form/Contribute/Repeat.php
+msgid "% Upgraded Donors"
+msgstr "% frissített adományozók"
+
+#: CRM/Report/Form/Contribute/Repeat.php
+msgid "% Downgraded Donors"
+msgstr "% visszaminősített adományozók"
+
+#: CRM/Report/Form/Contribute/Repeat.php
+msgid "% Maintained Donors"
+msgstr "% karbantartott adományozók"
+
+#: CRM/Report/Form/Contribute/Repeat.php
+msgid "Initial Date Range:"
+msgstr "Kezdeti dátum intervallum"
+
+#: CRM/Report/Form/Contribute/Repeat.php
+msgid "Total Donations"
+msgstr "Összes adomány"
+
+#: CRM/Report/Form/Contribute/Repeat.php
+msgid "Second Date Range:"
+msgstr "Második dátum intervallum:"
+
+#: CRM/Report/Form/Contribute/Repeat.php
+msgid "% Change"
+msgstr "% módosítás"
+
+#: CRM/Report/Form/Contribute/Summary.php
+msgid "Week Beginning"
+msgstr "Hét kezdete"
+
+#: CRM/Report/Form/Contribute/Summary.php
+msgid "Year Beginning"
+msgstr "Év kezdete"
+
+#: CRM/Report/Form/Contribute/Summary.php
+msgid "Fiscal Year Beginning"
+msgstr "Pénzügyi év kezdete"
+
+#: CRM/Report/Form/Contribute/Summary.php
+msgid "Month Beginning"
+msgstr "Hónap kezdete"
+
+#: CRM/Report/Form/Contribute/Sybunt.php
+msgid "Up To %1"
+msgstr "Akár  %1 "
+
+#: CRM/Report/Form/Contribute/Sybunt.php
+msgid "LifeTime"
+msgstr "ÉletTartam"
+
+#: CRM/Report/Form/Event/IncomeCountSummary.php
+#: CRM/Report/Form/Event/ParticipantListCount.php
+#: CRM/Report/Form/Event/Summary.php
+msgid "Total Income"
+msgstr "Összes bevétel"
 
 #: CRM/Report/Form/Event/ParticipantListing.php
 msgid "Registered by Participant ID"
@@ -2183,6 +2282,14 @@ msgstr "Eredmények megtekintése"
 msgid "Show Criteria"
 msgstr "Kritériumok mutatása"
 
+#: CRM/Report/Form/Instance.php
+msgid "Cache dashlet for"
+msgstr "Cache kisalkalmazás"
+
+#: CRM/Report/Form/Instance.php
+msgid "Add to My Reports?"
+msgstr "Jelentéseimhez hozzáadjuk?"
+
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Bounce Date"
 msgstr "Visszapattanás dátuma"
@@ -2199,21 +2306,37 @@ msgstr "Visszatartás dátuma"
 msgid "Hold reset date"
 msgstr "Visszatartásból újrakezdés dátuma"
 
-#: CRM/Report/Form/Mailing/Summary.php
-msgid "Opt-outs"
-msgstr "Összes leiratkozás"
-
-#: CRM/Report/Form/Mailing/Summary.php
-msgid "Total Open Rate"
-msgstr "Összes megnyitási ráta"
+#: CRM/Report/Form/Mailing/Bounce.php
+msgid "--Please Select--"
+msgstr "-Kérem válasszon-"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Unique Open Rate"
 msgstr "Egyedi megnyitási ráta"
 
 #: CRM/Report/Form/Mailing/Summary.php
+msgid "Total Open Rate"
+msgstr "Összes megnyitási ráta"
+
+#: CRM/Report/Form/Mailing/Summary.php
+msgid "Opt-outs"
+msgstr "Összes leiratkozás"
+
+#: CRM/Report/Form/Mailing/Summary.php
+msgid "Groups Included in Mailing"
+msgstr ""
+
+#: CRM/Report/Form/Mailing/Summary.php
 msgid "View Mailing details for this mailing"
 msgstr "Ezen körlevél levelezési részleteinek megtekintése"
+
+#: CRM/Report/Form/Member/Lapse.php
+msgid "Lapsed Memberships"
+msgstr ""
+
+#: CRM/Report/Form.php
+msgid " (copy created by %1 on %2)"
+msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Developer"
@@ -2224,12 +2347,32 @@ msgid "Grand Total"
 msgstr "Mindösszesen"
 
 #: CRM/Report/Form.php
+msgid "Contact Modified"
+msgstr ""
+
+#: CRM/Report/Form.php
+msgid "Do not SMS"
+msgstr ""
+
+#: CRM/Report/Form.php
+msgid "Do not bulk email"
+msgstr ""
+
+#: CRM/Report/Form.php
 msgid "Refresh results"
 msgstr "Eredmények frissítése"
 
 #: CRM/Report/Form.php
 msgid "View results"
 msgstr "Eredmények megtekintése"
+
+#: CRM/Report/Info.php
+msgid "administer private reports"
+msgstr ""
+
+#: CRM/Report/Info.php
+msgid "Edit all private reports"
+msgstr ""
 
 #: CRM/Report/Info.php
 msgid "view report sql"
@@ -2251,15 +2394,44 @@ msgstr "Jelentés nyomtatása"
 msgid "Export to csv"
 msgstr "Exportálás csv-be"
 
-#: CRM/Report/Page/InstanceList.php
-msgid "Delete report"
-msgstr "Jelentés törlése"
-
-#: CRM/Report/Page/InstanceList.php
-msgid ""
-"Are you sure you want delete this report? This action cannot be undone."
-msgstr "Biztos abban, hogy törli ezt a jelentést? Ez a művelet nem visszavonható."
-
 #: templates/CRM/Report/Form/Tabs/Instance.tpl
 msgid "Link to "
 msgstr "Link "
+
+#: templates/CRM/Report/Form/Tabs/Instance.tpl
+msgid ""
+"If set to Yes, this report will appear in the My Reports section of the "
+"reports listing page and will only be visible by you."
+msgstr ""
+
+#: templates/CRM/Report/Form/Tabs/Instance.tpl
+msgid "rows"
+msgstr ""
+
+#: templates/CRM/Report/Form/Tabs/Settings.hlp
+msgid "Dashboard Caching"
+msgstr ""
+
+#: templates/CRM/Report/Form/Tabs/Settings.hlp
+msgid ""
+"How often should the contents of this dashlet be automatically refreshed? "
+"Users can manually reload by clicking the refresh button on their "
+"dashboards."
+msgstr ""
+
+#: templates/CRM/Report/Form/Tabs/Settings.hlp
+msgid "Add to My Reports"
+msgstr ""
+
+#: templates/CRM/Report/Form/Tabs/Settings.hlp
+msgid ""
+"Selecting Yes will set the report to be visible only to the user\n"
+"  that clicked this option and saved the report settings form. If this is\n"
+"  enabled, the permissions configuration for this report will be disabled."
+msgstr ""
+
+#: templates/CRM/Report/Page/InstanceList.tpl
+msgid ""
+"You do not have any private reports. To add a report to this section, edit "
+"the Report Settings for a report and set 'Add to My Reports' to Yes."
+msgstr ""
